asg/tests/pass/integers/u16/max.leo
function main() {
    let a: u16 = 65535;
}